update translations add menu translation highlight

--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -43,6 +43,13 @@
             </svg>
             <span>{{ i18n "pricing_feature_4" }}</span>
           </li>
+          <li class="flex items-start space-x-3">
+            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+              <circle cx="12" cy="12" r="10"/>
+              <path d="m9 12 2 2 4-4"/>
+            </svg>
+            <span>{{ i18n "pricing_feature_5" }}</span>
+          </li>
         </ul>
       </div>
       <div class="flex flex-col p-6 mx-auto w-full bg-linear-to-t from-red-600 to-red-500 text-neutral-900 rounded-lg xl:p-8">
@@ -57,13 +64,6 @@
         </div>
         <!-- List -->
         <ul role="list" class="mb-8 space-y-4 text-left">
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="m9 12 2 2 4-4"/>
-            </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_5" }}</span>
-          </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
@@ -91,6 +91,20 @@
               <path d="m9 12 2 2 4-4"/>
             </svg>
             <span class="text-red-200">{{ i18n "pricing_feature_9" }}</span>
+          </li>
+          <li class="flex items-start space-x-3">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+              <circle cx="12" cy="12" r="10"/>
+              <path d="m9 12 2 2 4-4"/>
+            </svg>
+            <span class="text-red-200">{{ i18n "pricing_feature_10" }}</span>
+          </li>
+          <li class="flex items-start space-x-3">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+              <circle cx="12" cy="12" r="10"/>
+              <path d="m9 12 2 2 4-4"/>
+            </svg>
+            <span class="text-red-200">{{ i18n "pricing_feature_11" }}</span>
           </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
