--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,6 +4,7 @@
     {{ partial "highlight2.html" . }}
     {{ partial "highlight3.html" . }}
     {{ partial "highlight4.html" . }}
+    {{ partial "highlight5.html" . }}
     {{ partial "pricing.html" . }}
     {{ partial "faq.html" . }}
     {{ partial "posts.html" . }}
