fix typo on lang image path

--- a/layouts/partials/highlight5.html
+++ b/layouts/partials/highlight5.html
@@ -9,6 +9,6 @@
                 {{ i18n "highlight_5_description" }}
             </p>
         </div>
-        <img class="w-full" src="/images/şang.png" alt="qr product language translations">
+        <img class="w-full" src="/images/lang.png" alt="qr product language translations">
     </div>
 </section>
