--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -95,6 +95,9 @@
             {{ end }}
           {{ end }}
         </ul>
+        <a href="https://panel.menumix.app/login"
+          class="flex md:hidden items-center justify-center px-4 lg:px-5 py-2 lg:py-2 mr-2 text-md font-medium bg-red-600 text-white rounded-lg hover:bg-red-500 focus:ring-4 focus:ring-neutral-100 dark:hover:bg-red-800 dark:focus:ring-neutral-800">{{ i18n "header_login" }}
+        </a>
       </div>
     </div>
   </nav>
