convert images to webp

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -12,7 +12,7 @@
             </a> 
         </div>
         <div class="mt-8 max-w-6xl mx-auto">
-            <img src="/images/banner.png" alt="menumix_qr">
+            <img src="/images/banner.webp" alt="menumix_qr">
         </div>                
     </div>
 </section>
