--- a/layouts/partials/highlight3.html
+++ b/layouts/partials/highlight3.html
@@ -9,6 +9,6 @@
                 {{ i18n "highlight_3_description" }}
             </p>
         </div>
-        <img class="w-full" src="/images/reports.png" alt="qr sales reports">
+        <img class="w-full" src="/images/reports.webp" alt="qr sales reports">
     </div>
 </section>
