--- a/layouts/partials/highlight4.html
+++ b/layouts/partials/highlight4.html
@@ -1,6 +1,6 @@
 <section class="bg-white dark:bg-neutral-900">
     <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-        <img class="w-full" src="/images/kitchen.png" alt="live kitchen order tracking">
+        <img class="w-full" src="/images/kitchen.webp" alt="live kitchen order tracking">
         <div class="mt-4 md:mt-0">
             <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "highlight_4_subtitle" }}</h1>
             <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900 dark:text-white">
