add json-ld aggregate rating

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -120,6 +120,11 @@
         "price": "20.00",
         "priceCurrency": "USD"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": 4.7,
+        "ratingCount": 240
+      },
       "publisher": {
         "@type": "Organization",
         "name": "Menumix",
@@ -145,6 +150,11 @@
         "price": "900.00",
         "priceCurrency": "TRY"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": 4.7,
+        "ratingCount": 240
+      },
       "publisher": {
         "@type": "Organization",
         "name": "Menumix",
@@ -169,6 +179,11 @@
         "@type": "Offer",
         "price": "20.00",
         "priceCurrency": "EUR"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": 4.7,
+        "ratingCount": 240
       },
       "publisher": {
         "@type": "Organization",
