add analytics tags

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
         {{ end }}
         {{ partialCached "css.html" . }}
     </head>
+    {{ partial "analytics.html" . }}
     <style>
         html, body{
             overflow-x: hidden;
