--- a/layouts/partials/highlight1.html
+++ b/layouts/partials/highlight1.html
@@ -9,6 +9,7 @@
                 {{ i18n "highlight_1_description" }}
             </p>
         </div>
-        <img class="w-full" src="/images/orders.webp" alt="qr orders">
+        <img class="w-full" src="/images/orders_{{ .Site.Language.Lang }}.webp">
+
     </div>
 </section>
