--- a/layouts/partials/highlight5.html
+++ b/layouts/partials/highlight5.html
@@ -9,6 +9,6 @@
                 {{ i18n "highlight_5_description" }}
             </p>
         </div>
-        <img class="w-full" src="/images/lang.webp" alt="qr product language translations">
+        <img class="w-full" src="/images/languages_{{ .Site.Language.Lang }}.webp">
     </div>
 </section>
