remove dark theme fix highlight ordering on mobile

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,23 +1,17 @@
-<header class="fixed top-0 right-0 z-40 w-full border-neutral-200 dark:border-neutral-800">
-  <nav class="relative bg-white dark:bg-neutral-900 px-4 lg:px-6 py-2 overflow-visible">
+<header class="fixed top-0 right-0 z-40 w-full border-neutral-200">
+  <nav class="relative bg-white px-4 lg:px-6 py-2 overflow-visible">
     <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-      <!-- Logo -->
-      <a href="/" class="flex items-center dark:hidden">
-        <img src="/images/logo-dark.png" class="mr-3 h-5" alt="Menumix Logo" />
-      </a>
-      <a href="/" class="flex items-center hidden dark:block">
+      <a href="/" class="flex items-center hidden">
         <img src="/images/logo-light.png" class="mr-3 h-5" alt="Menumix Logo" />
       </a>
 
       <!-- Right: Theme + Login + Mobile Toggle -->
       <div class="flex items-center lg:order-2">
-        <button id="theme-toggle" type="button" class="text-neutral-500 dark:text-white hover:bg-neutral-100 font-medium rounded-lg text-sm px-2 lg:px-3 py-2 lg:py-2.5 mr-2 dark:hover:bg-neutral-800">
-            <svg xmlns="http://www.w3.org/2000/svg" id="theme-toggle-dark-icon" class="hidden w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sun-icon lucide-sun"><circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" id="theme-toggle-light-icon" class="hidden w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-moon-icon lucide-moon"><path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/></svg>
-        </button>
         <a href="https://panel.menumix.app/login"
-          class="hidden md:flex items-center justify-center px-4 lg:px-5 py-2 lg:py-2 mr-2 text-md font-medium text-neutral-700 border border-neutral-300 rounded-lg hover:bg-neutral-100 focus:ring-4 focus:ring-neutral-100 dark:text-white dark:border-neutral-700 dark:hover:bg-neutral-800 dark:focus:ring-neutral-800">{{ i18n "header_login" }}</a>
-        <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-neutral-500 rounded-lg lg:hidden hover:bg-neutral-100 dark:text-neutral-400 dark:hover:bg-neutral-800" aria-controls="mobile-menu-2" aria-expanded="false">
+          class="items-center justify-center px-4 lg:px-5 py-1 lg:py-2 mr-2 text-md font-medium text-neutral-700 border border-neutral-300 rounded-lg hover:bg-neutral-100 focus:ring-4 focus:ring-neutral-100">
+          {{ i18n "header_login" }}
+        </a>
+        <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-neutral-500 rounded-lg lg:hidden hover:bg-neutral-100" aria-controls="mobile-menu-2" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"><path d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
         </button>
@@ -40,19 +34,14 @@
                     text-neutral-700
                     border-b border-neutral-100
                     hover:text-red-500 
-                    dark:text-neutral-400
                     cursor-pointer
-                    dark:hover:text-white
-                    dark:hover:bg-neutral-800
-                    dark:border-neutral-700
-                    lg:dark:hover:bg-transparent
                     lg:hover:bg-transparent
                     lg:border-0
                     lg:p-0">
                     {{ .Name }}
                     <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M19 9l-7 7-7-7"/></svg>
                   </button>
-                  <ul id="features-menu" class="hidden lg:absolute lg:left-0 z-10 lg:bg-white lg:dark:bg-neutral-800 lg:border lg:border-neutral-200 lg:dark:border-neutral-700 lg:mt-2 lg:rounded-lg lg:shadow-lg min-w-[220px]">
+                  <ul id="features-menu" class="hidden lg:absolute lg:left-0 z-10 lg:bg-white lg:border lg:border-neutral-200 lg:mt-2 lg:rounded-lg lg:shadow-lg min-w-[220px]">
                     {{ range $features }}
                       <li>
                         <a href="#features" class="
@@ -60,9 +49,8 @@
                             px-4 py-2
                             text-md
                             text-neutral-700
-                            hover:bg-neutral-100
-                            dark:text-neutral-200
-                            dark:hover:bg-neutral-800">
+                            hover:bg-neutral-100"
+                            >
                           {{ .Name }}
                         </a>
                       </li>
@@ -79,12 +67,6 @@
                     hover:bg-neutral-50 
                     hover:text-red-500
                     lg:p-0
-                    dark:text-neutral-400
-                    dark:border-neutral-700
-                    dark:hover:bg-neutral-800
-                    dark:hover:text-white
-                    lg:dark:hover:bg-transparent
-                    lg:dark:hover:text-white
                     lg:hover:bg-transparent
                     lg:border-0"
                     >
@@ -96,7 +78,7 @@
           {{ end }}
         </ul>
         <a href="https://panel.menumix.app/login"
-          class="flex md:hidden items-center justify-center px-4 lg:px-5 py-2 lg:py-2 mr-2 text-md font-medium bg-red-600 text-white rounded-lg hover:bg-red-500 focus:ring-4 focus:ring-neutral-100 dark:hover:bg-red-800 dark:focus:ring-neutral-800">{{ i18n "header_login" }}
+          class="flex md:hidden items-center justify-center px-4 lg:px-5 py-2 lg:py-2 mr-2 text-md font-medium bg-red-600 text-white rounded-lg hover:bg-red-500 focus:ring-4 focus:ring-neutral-100">{{ i18n "header_login" }}
         </a>
       </div>
     </div>
