--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -22,16 +22,16 @@
         overflow-wrap: break-word;
     }
 </style>
-<main class="pt-8 pb-16 lg:pt-16 lg:pb-24 bg-white dark:bg-neutral-900 antialiased">
+<main class="pt-8 pb-16 lg:pt-16 lg:pb-24 bg-white antialiased">
     <div class="flex justify-between px-4 mx-auto max-w-screen-xl ">
-        <article class="mx-auto w-full max-w-2xl format format-sm sm:format-base lg:format-lg format-blue dark:format-invert">
+        <article class="mx-auto w-full max-w-2xl format format-sm sm:format-base lg:format-lg format-blue">
             {{ partial "breadcrumbs.html" . }}
             {{ with .Resources.GetMatch "cover*" }} <!-- Look for featured image in the bundle -->
                 <img class="w-full rounded-lg max-h-48 mb-8" src="{{ .Permalink }}" alt="{{ $.Title }}" style="height:300px; object-fit:cover; object-position: center;">
             {{ end }}
             <header class="mb-4 lg:mb-6">
-                <h1 class="mb-4 text-3xl font-extrabold leading-tight text-neutral-900 lg:mb-6 lg:text-4xl dark:text-white">{{ .Title }}</h1>
-                <p class="text-base text-neutral-500 dark:text-neutral-400">{{ .Date | time.Format ":date_medium" }}</p>
+                <h1 class="mb-4 text-3xl font-extrabold leading-tight text-neutral-900 lg:mb-6 lg:text-4xl">{{ .Title }}</h1>
+                <p class="text-base text-neutral-500">{{ .Date | time.Format ":date_medium" }}</p>
             </header>
             {{ .Content }}
       </article>
