--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,16 +1,16 @@
 {{ define "main" }}
-<section class="bg-white dark:bg-neutral-900">
+<section class="bg-white">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
       <div class="mx-auto max-w-screen-sm text-center lg:mb-16 mb-8">
          <div class="mx-auto max-w-screen-sm text-center lg:mb-16 mb-8">
-            <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold text-neutral-900 dark:text-white">{{ i18n "blog_title" }}</h2>
-            <p class="font-light text-neutral-500 sm:text-xl dark:text-neutral-400">{{ i18n "blog_description" }}</p>
+            <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold text-neutral-900">{{ i18n "blog_title" }}</h2>
+            <p class="font-light text-neutral-500 sm:text-xl">{{ i18n "blog_description" }}</p>
         </div> 
       </div> 
       <div class="grid gap-8 lg:grid-cols-3">
         {{ $paginator := .Paginate (where .Site.RegularPages "Section" "blog") }}
             {{ range $paginator.Pages }}
-            <div class="p-4 bg-white rounded-md border border-neutral-200 dark:bg-neutral-900 dark:border-neutral-700">
+            <div class="p-4 bg-white rounded-md border border-neutral-200">
                 {{ with .Resources.GetMatch "cover*" }}
                 <a>
                     <img src="{{ .Permalink }}" class="w-full max-h-36 mb-4 rounded-sm" alt="{{ $.Title }}" style="height:180px; object-fit:cover; object-position:center;">
@@ -19,9 +19,9 @@
                 <div class="flex justify-between items-center mb-2 text-neutral-500">
                     <span class="text-sm">{{ .Date | time.Format ":date_medium" }}</span>
                 </div>
-                <h2 class="mb-2 text-2xl font-bold tracking-tight text-neutral-900 dark:text-white"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+                <h2 class="mb-2 text-2xl font-bold tracking-tight text-neutral-900"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
                 <div class="flex justify-between items-center">
-                    <a href="{{ .Permalink }}" class="inline-flex items-center font-medium text-red-600 dark:text-red-500 hover:underline">
+                    <a href="{{ .Permalink }}" class="inline-flex items-center font-medium text-red-600 hover:underline">
                         Read more
                         <svg class="ml-2 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </a>
