--- a/layouts/features/single.html
+++ b/layouts/features/single.html
@@ -22,17 +22,17 @@
         overflow-wrap: break-word;
     }
 </style>
-<main class="pt-8 pb-16 lg:pt-16 lg:pb-24 bg-white dark:bg-neutral-900 antialiased">
+<main class="pt-8 pb-16 lg:pt-16 lg:pb-24 bg-white antialiased">
   <div class="flex justify-between px-4 mx-auto max-w-screen-xl">
-    <article class="flex flex-col mx-auto w-full max-w-4xl format format-sm sm:format-base lg:format-lg format-blue dark:format-invert">
+    <article class="flex flex-col mx-auto w-full max-w-4xl format format-sm sm:format-base lg:format-lg format-blue">
       <header class="mb-4 lg:mb-6">
-        <h1 class="mb-4 text-3xl font-extrabold leading-tight text-neutral-900 lg:mb-6 lg:text-4xl dark:text-white">{{ .Title }}</h1>
+        <h1 class="mb-4 text-3xl font-extrabold leading-tight text-neutral-900 lg:mb-6 lg:text-4xl">{{ .Title }}</h1>
       </header>
 
       {{ range $index, $section := .Params.sections }}
         <div class="flex flex-row g-4 mb-12">
           <div class="w-full">
-            <h2 class="mb-4 text-xl font-extrabold leading-tight text-neutral-900 lg:mb-6 lg:text-2xl dark:text-white">{{ $section.title }}</h2>
+            <h2 class="mb-4 text-xl font-extrabold leading-tight text-neutral-900 lg:mb-6 lg:text-2xl">{{ $section.title }}</h2>
             <p>{{ $section.content }}</p>
           </div>
           <div class="w-full">
