--- a/layouts/legal/list.html
+++ b/layouts/legal/list.html
@@ -1,16 +1,16 @@
 {{ define "main" }}
-<section class="bg-white dark:bg-neutral-900">
+<section class="bg-white">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
       <div class="grid gap-8 lg:grid-cols-3">
         {{ $paginator := .Paginate (where .Site.RegularPages "Section" "legal") }}
             {{ range $paginator.Pages }}
-            <div class="p-4 bg-white rounded-md border border-neutral-200 dark:bg-neutral-900 dark:border-neutral-700">
+            <div class="p-4 bg-white rounded-md border border-neutral-200">
                 <div class="flex justify-between items-center mb-2 text-neutral-500">
                     <span class="text-sm">{{ .Date | time.Format ":date_medium" }}</span>
                 </div>
-                <h2 class="mb-2 text-2xl font-bold tracking-tight text-neutral-900 dark:text-white"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+                <h2 class="mb-2 text-2xl font-bold tracking-tight text-neutral-900"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
                 <div class="flex justify-between items-center">
-                    <a href="{{ .Permalink }}" class="inline-flex items-center font-medium text-red-600 dark:text-red-500 hover:underline">
+                    <a href="{{ .Permalink }}" class="inline-flex items-center font-medium text-red-600 hover:underline">
                         Read more
                         <svg class="ml-2 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </a>
