--- a/layouts/partials/highlight1.html
+++ b/layouts/partials/highlight1.html
@@ -1,15 +1,14 @@
-<section id="features" class="bg-white dark:bg-neutral-900">
+<section id="features" class="bg-white">
     <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-        <div class="mt-4 md:mt-0">
-            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "highlight_1_subtitle" }}</h1>
-            <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900 dark:text-white">
+        <div class=" mt-4 md:mt-0">
+            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500">{{ i18n "highlight_1_subtitle" }}</h1>
+            <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900">
                 {{ i18n "highlight_1_title" }}
             </h2>
-            <p class="mb-6 font-light text-neutral-500 md:text-lg dark:text-neutral-400">
+            <p class="mb-6 font-light text-neutral-500 md:text-lg">
                 {{ i18n "highlight_1_description" }}
             </p>
         </div>
         <img class="w-full" src="/images/orders_{{ .Site.Language.Lang }}.webp">
-
     </div>
 </section>
