--- a/layouts/partials/highlight4.html
+++ b/layouts/partials/highlight4.html
@@ -1,12 +1,12 @@
-<section class="bg-white dark:bg-neutral-900">
-    <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-        <img class="w-full" src="/images/kitchen_{{ .Site.Language.Lang }}.webp">
-        <div class="mt-4 md:mt-0">
-            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "highlight_4_subtitle" }}</h1>
-            <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900 dark:text-white">
+<section class="bg-white">
+    <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 flex flex-col md:grid md:grid-cols-2 sm:py-16 lg:px-6">
+        <img class="order-2 md:order-1 w-full" src="/images/kitchen_{{ .Site.Language.Lang }}.webp">
+        <div class="order-1 md:order-2 mt-4 md:mt-0">
+            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500">{{ i18n "highlight_4_subtitle" }}</h1>
+            <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900">
                 {{ i18n "highlight_4_title" }}
             </h2>
-            <p class="mb-6 font-light text-neutral-500 md:text-lg dark:text-neutral-400">{{ i18n "highlight_4_description" }}</p>
+            <p class="mb-6 font-light text-neutral-500 md:text-lg">{{ i18n "highlight_4_description" }}</p>
         </div>
     </div>
 </section>
