--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <header class="fixed top-0 right-0 z-40 w-full border-neutral-200">
   <nav class="relative bg-white px-4 lg:px-6 py-2 overflow-visible">
     <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-      <a href="/" class="flex items-center hidden">
-        <img src="/images/logo-light.png" class="mr-3 h-5" alt="Menumix Logo" />
+      <a href="/" class="flex items-center">
+        <img src="/images/logo-dark.png" class="mr-3 h-5" alt="Menumix Logo" />
       </a>
 
       <!-- Right: Theme + Login + Mobile Toggle -->
