--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,20 @@
+<section class="bg-neutral-800 px-4 py-16 md:py-4">
+    <div class="flex items-center flex-col md:flex-row align-i max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0">
+        <div class="flex-3">
+            <div class="md:max-w-lg">
+                <h1 class="text-white max-w-4xl mb-1 text-4xl font-bold tracking-tight leading-none md:text-3xl lg:text-4xl xl:text-4xl">{{ i18n "hero_title" }}</h1>
+                <p class="max-w-3xl my-6 font-light text-neutral-300 lg:mb-8 text-lg lg:text-xl">{{ i18n "hero_description" }}</p>
+                <a href="https://panel.menumix.app/register" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-red-600 hover:bg-red-500 focus:ring-4 focus:ring-red-300">
+                    {{ i18n "hero_cta_button" }}
+                </a>
+            </div>
+        </div>
+        <div class="hidden md:flex flex-2 mt-8 max-w-6xl mx-auto">
+            <img src="/images/hero_{{ .Site.Language.Lang }}.webp" alt="menumix_qr">
+        </div>                
+    </div>
+</section>
+
 <footer class="p-4 bg-black sm:p-6">
     <div class="mx-auto max-w-screen-xl">
         <div class="md:flex md:justify-between">
