update brand color to indigo

--- a/layouts/features/single.html
+++ b/layouts/features/single.html
@@ -36,10 +36,10 @@
   <div class="px-4 mx-auto max-w-screen-xl">
     <div class="flex flex-col md:flex-row items-center justify-between gap-8 mx-auto max-w-4xl">
       <div>
-        <span class="inline-flex items-center rounded-md bg-red-100 px-2 py-1 mb-2 text-xl font-medium text-red-700">{{ i18n "menu_features" }}</span>
+        <span class="inline-flex items-center rounded-md bg-indigo-100 px-2 py-1 mb-2 text-xl font-medium text-indigo-700">{{ i18n "menu_features" }}</span>
         <h1 class="text-black max-w-4xl mb-1 text-4xl font-bold tracking-tight leading-none md:text-4xl lg:text-5xl xl:text-5xl">{{ .Title }}</h1>
         <p class="max-w-3xl my-6 text-neutral-700 lg:mb-8 text-lg lg:text-xl">{{ .Description }}</p>
-        <a href="https://panel.menumix.app/register" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-red-600 hover:bg-red-500 focus:ring-4 focus:ring-red-300">
+        <a href="https://panel.menumix.app/register" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-indigo-600 hover:bg-indigo-500 focus:ring-4 focus:ring-indigo-300">
             {{ i18n "hero_cta_button" }}
         </a>
       </div>
