--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
             <div class="md:max-w-lg">
                 <h1 class="text-white max-w-4xl mb-1 text-4xl font-bold tracking-tight leading-none md:text-3xl lg:text-4xl xl:text-4xl">{{ i18n "hero_title" }}</h1>
                 <p class="max-w-3xl my-6 font-light text-neutral-300 lg:mb-8 text-lg lg:text-xl">{{ i18n "hero_description" }}</p>
-                <a href="https://panel.menumix.app/register" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-red-600 hover:bg-red-500 focus:ring-4 focus:ring-red-300">
+                <a href="https://panel.menumix.app/register" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-indigo-600 hover:bg-indigo-500 focus:ring-4 focus:ring-indigo-300">
                     {{ i18n "hero_cta_button" }}
                 </a>
             </div>
