--- a/layouts/partials/head-blog.html
+++ b/layouts/partials/head-blog.html
@@ -2,7 +2,7 @@
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="theme-color" content="#DC2627" />
+<meta name="theme-color" content="#4F39F6" />
 <meta name="apple-mobile-web-app-title" content="Menumix" />
 
 <link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
