--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -38,7 +38,7 @@
     {{ end }}
 {{- end }}
 <meta property="og:url" content="https://menumix.app"/>
-<meta name="theme-color" content="#DC2627"/>
+<meta name="theme-color" content="#4F39F6"/>
 
 {{ if .IsHome }}
 <script type="application/ld+json">
