--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,10 +2,10 @@
 <section class="bg-white">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
         <div class="mx-auto max-w-screen-sm text-center">
-            <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-red-600">404</h1>
+            <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-indigo-600">404</h1>
             <p class="mb-4 text-3xl tracking-tight font-bold text-neutral-900 md:text-4xl">Something's missing.</p>
             <p class="mb-4 text-lg font-light text-neutral-500">Sorry, we can't find that page. You'll find lots to explore on the home page. </p>
-            <a href="#" class="inline-flex text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4">Back to Homepage</a>
+            <a href="#" class="inline-flex text-white bg-indigo-600 hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4">Back to Homepage</a>
         </div>   
     </div>
 </section>
