--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -8,7 +8,7 @@
         <span class="mx-2 text-neutral-400">/</span>
       </li>
     {{ end }}
-    <li class="flex items-center text-red-600 font-medium" aria-current="page">
+    <li class="flex items-center text-indigo-600 font-medium" aria-current="page">
       <a href="{{ .Permalink }}" class="truncate max-w-[160px] block">
         {{ .LinkTitle | truncate 20 "..." }}
       </a>
