--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -1,13 +1,13 @@
 <section id="faq">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="text-center mb-12">
-      <h4 class="text-1xl tracking-tight font-bold text-red-500">{{ i18n "faq_subtitle" }}</h4>
+      <h4 class="text-1xl tracking-tight font-bold text-indigo-500">{{ i18n "faq_subtitle" }}</h4>
       <h2 class="mb-8 text-5xl tracking-tight font-bold text-neutral-900">{{ i18n "faq_title" }}</h2>
     </div>
     <div class="max-w-3xl mx-auto">
       {{ range seq 1 6 }}
       <details class="mb-4 group">
-        <summary class="flex items-center justify-between cursor-pointer text-xl font-medium text-neutral-900 hover:text-red-500 transition-colors">
+        <summary class="flex items-center justify-between cursor-pointer text-xl font-medium text-neutral-900 hover:text-indigo-500 transition-colors">
           <span class="flex items-center my-2">
             {{ i18n (print "faq_" . "_q") }}
           </span>
