--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -1,14 +1,14 @@
 <section class="bg-neutral-900" id="features">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="max-w-screen-md mb-8 lg:mb-16">
-      <h1 class="mb-2 text-md tracking-tight font-bold text-red-500">{{ i18n "features_subtitle" }}</h1>
+      <h1 class="mb-2 text-md tracking-tight font-bold text-indigo-500">{{ i18n "features_subtitle" }}</h1>
       <h2 class="mb-4 text-4xl tracking-tight font-bold text-white">{{ i18n "features_title" }}</h2>
       <p class="sm:text-xl text-neutral-400">{{ i18n "features_description" }}</p>
     </div>
     <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
       <div class="bg-neutral-800 p-6 rounded-lg">
-        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
-          <svg class="w-5 h-5 lg:w-6 lg:h-6 text-red-200" fill="currentColor" viewBox="0 0 20 20">
+        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-indigo-500 lg:h-12 lg:w-12">
+          <svg class="w-5 h-5 lg:w-6 lg:h-6 text-indigo-200" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3z" clip-rule="evenodd"></path>
           </svg>
         </div>
@@ -16,8 +16,8 @@
         <p class="text-neutral-400">{{ i18n "feature_1_description" }}</p>
       </div>
       <div class="bg-neutral-800 p-6 rounded-lg">
-        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
-          <svg class="w-5 h-5 lg:w-6 lg:h-6 text-red-200" fill="currentColor" viewBox="0 0 20 20">
+        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-indigo-500 lg:h-12 lg:w-12">
+          <svg class="w-5 h-5 lg:w-6 lg:h-6 text-indigo-200" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3z" clip-rule="evenodd"></path>
           </svg>
         </div>
@@ -25,8 +25,8 @@
         <p class="text-neutral-400">{{ i18n "feature_2_description" }}</p>
       </div>
       <div class="bg-neutral-800 p-6 rounded-lg">
-        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
-          <svg class="w-5 h-5 lg:w-6 lg:h-6 text-red-200" fill="currentColor" viewBox="0 0 20 20">
+        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-indigo-500 lg:h-12 lg:w-12">
+          <svg class="w-5 h-5 lg:w-6 lg:h-6 text-indigo-200" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3z" clip-rule="evenodd"></path>
           </svg>
         </div>
