--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,7 +33,7 @@
                     text-left
                     text-neutral-700
                     border-b border-neutral-100
-                    hover:text-red-500 
+                    hover:text-indigo-500 
                     cursor-pointer
                     lg:hover:bg-transparent
                     lg:border-0
@@ -65,7 +65,7 @@
                     text-neutral-700
                     border-b border-neutral-100
                     hover:bg-neutral-50 
-                    hover:text-red-500
+                    hover:text-indigo-500
                     lg:p-0
                     lg:hover:bg-transparent
                     lg:border-0"
@@ -78,7 +78,7 @@
           {{ end }}
         </ul>
         <a href="https://panel.menumix.app/login"
-          class="flex md:hidden items-center justify-center px-4 lg:px-5 py-2 lg:py-2 mr-2 text-md font-medium bg-red-600 text-white rounded-lg hover:bg-red-500 focus:ring-4 focus:ring-neutral-100">{{ i18n "header_login" }}
+          class="flex md:hidden items-center justify-center px-4 lg:px-5 py-2 lg:py-2 mr-2 text-md font-medium bg-indigo-600 text-white rounded-lg hover:bg-indigo-500 focus:ring-4 focus:ring-neutral-100">{{ i18n "header_login" }}
         </a>
       </div>
     </div>
