--- a/layouts/partials/highlight2.html
+++ b/layouts/partials/highlight2.html
@@ -2,7 +2,7 @@
     <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 flex flex-col md:grid md:grid-cols-2 sm:py-16 lg:px-6">
         <img class="order-2 md:order-1 w-full" src="/images/bills_{{ .Site.Language.Lang }}.webp">
         <div class="order-1 md:order-2 mt-4 md:mt-0">
-            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500">{{ i18n "highlight_2_subtitle" }}</h1>
+            <h1 class="mb-2 text-lg tracking-tight font-bold text-indigo-500">{{ i18n "highlight_2_subtitle" }}</h1>
             <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900">
                 {{ i18n "highlight_2_title" }}
             </h2>
