--- a/layouts/partials/highlight3.html
+++ b/layouts/partials/highlight3.html
@@ -1,7 +1,7 @@
 <section class="bg-white">
     <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
         <div class="mt-4 md:mt-0">
-            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500">{{ i18n "highlight_3_subtitle" }}</h1>
+            <h1 class="mb-2 text-lg tracking-tight font-bold text-indigo-500">{{ i18n "highlight_3_subtitle" }}</h1>
             <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900">
                 {{ i18n "highlight_3_title" }}
             </h2>
