--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -1,7 +1,7 @@
 <section class="bg-neutral-900" id="pricing">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
     <div class="mx-auto max-w-screen-md text-center mb-8 lg:mb-12">
-      <h1 class="mb-4 text-1xl tracking-tight font-bold text-red-500">{{ i18n "pricing_subtitle" }}</h1>
+      <h1 class="mb-4 text-1xl tracking-tight font-bold text-indigo-500">{{ i18n "pricing_subtitle" }}</h1>
       <h2 class="mb-4 text-5xl tracking-tight font-bold text-white">{{ i18n "pricing_title" }}</h2>
       <p class="mb-5 font-light text-neutral-500 sm:text-xl">{{ i18n "pricing_description" }}</p>
     </div>
@@ -16,35 +16,35 @@
         <!-- List -->
         <ul role="list" class="mb-8 space-y-4 text-left">
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
             <span>{{ i18n "pricing_feature_1" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
             <span>{{ i18n "pricing_feature_2" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
             <span>{{ i18n "pricing_feature_3" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
             <span>{{ i18n "pricing_feature_4" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
@@ -52,14 +52,14 @@
           </li>
         </ul>
       </div>
-      <div class="flex flex-col p-6 mx-auto w-full bg-linear-to-t from-red-600 to-red-500 text-neutral-900 rounded-lg xl:p-8">
+      <div class="flex flex-col p-6 mx-auto w-full bg-linear-to-t from-indigo-600 to-indigo-500 text-neutral-900 rounded-lg xl:p-8">
         <h3 class="mb-4 text-2xl font-semibold text-white">{{ i18n "pricing_pro_title" }}</h3>
-        <p class="font-light text-red-300 sm:text-lg">{{ i18n "pricing_pro_description" }}</p>
+        <p class="font-light text-indigo-300 sm:text-lg">{{ i18n "pricing_pro_description" }}</p>
         <div class="my-8">
           <span class="mr-2 text-2xl text-neutral-900 line-through">{{ i18n "pricing_pro_price_discount" }}</span>
           <div class="flex justify-start items-baseline-last">
             <span class="mr-2 text-4xl font-bold text-white">{{ i18n "pricing_pro_price" }}</span>
-            <span class="mr-2 text-xl text-red-300">/{{ i18n "pricing_pro_month" }}</span>
+            <span class="mr-2 text-xl text-indigo-300">/{{ i18n "pricing_pro_month" }}</span>
           </div>
         </div>
         <!-- List -->
@@ -69,49 +69,49 @@
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_6" }}</span>
+            <span class="text-indigo-200">{{ i18n "pricing_feature_6" }}</span>
           </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_7" }}</span>
+            <span class="text-indigo-200">{{ i18n "pricing_feature_7" }}</span>
           </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_8" }}</span>
+            <span class="text-indigo-200">{{ i18n "pricing_feature_8" }}</span>
           </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_9" }}</span>
+            <span class="text-indigo-200">{{ i18n "pricing_feature_9" }}</span>
           </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_10" }}</span>
+            <span class="text-indigo-200">{{ i18n "pricing_feature_10" }}</span>
           </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_11" }}</span>
+            <span class="text-indigo-200">{{ i18n "pricing_feature_11" }}</span>
           </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-red-200">{{ i18n "pricing_feature_all" }}</span>
+            <span class="text-indigo-200">{{ i18n "pricing_feature_all" }}</span>
           </li>
         </ul>
       </div>
