--- a/layouts/partials/highlight5.html
+++ b/layouts/partials/highlight5.html
@@ -1,14 +1,12 @@
 <section class="bg-white">
-    <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-        <div class="mt-4 md:mt-0">
+    <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 flex flex-col md:grid md:grid-cols-2 sm:py-16 lg:px-6">
+        <img class="order-2 md:order-1 w-full" src="/images/languages_{{ .Site.Language.Lang }}.webp">
+        <div class="order-1 md:order-2 mt-4 md:mt-0">
             <h1 class="mb-2 text-lg tracking-tight font-bold text-indigo-500">{{ i18n "highlight_5_subtitle" }}</h1>
-            <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900">
+            <h2 class="mb-4 text-4xl tracking-tight font-bold text-neutral-900">
                 {{ i18n "highlight_5_title" }}
             </h2>
-            <p class="mb-6 font-light text-neutral-500 md:text-lg">
-                {{ i18n "highlight_5_description" }}
-            </p>
+            <p class="mb-6 font-light text-neutral-500 md:text-lg">{{ i18n "highlight_5_description" }}</p>
         </div>
-        <img class="w-full" src="/images/languages_{{ .Site.Language.Lang }}.webp">
     </div>
 </section>
