--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,8 +1,8 @@
 <section class="bg-white">
-    <div class="flex flex-col max-w-screen-xl px-4 pt-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16">
+    <div class="flex flex-col max-w-screen-xl px-4 pt-8 mx-auto lg:gap-8 xl:gap-0 lg:py-12">
         <div class="mx-auto text-center py-8">
-            <h1 class="max-w-3xl mb-1 text-5xl font-bold tracking-tight leading-none md:text-5xl lg:text-5xl xl:text-6xl">{{ i18n "hero_title" }}</h1>
-            <h1 class="max-w-3xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-4xl xl:text-4xl text-indigo-600">{{ i18n "hero_subtitle" }}</h1>
+            <h1 class="max-w-3xl mb-1 font-bold tracking-tight leading-none text-4xl lg:text-5xl">{{ i18n "hero_title" }}</h1>
+            <h1 class="max-w-3xl mb-4 font-bold tracking-tight leading-none text-indigo-600 text-3xl">{{ i18n "hero_subtitle" }}</h1>
             <p class="max-w-3xl my-6 font-light text-neutral-500 lg:mb-8 text-lg lg:text-xl">{{ i18n "hero_description" }}</p>
             <a href="https://panel.menumix.app/register" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-indigo-600 hover:bg-indigo-500 focus:ring-4 focus:ring-indigo-300">
                 {{ i18n "hero_cta_button" }}
