update sample menu link

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -7,7 +7,7 @@
             <a href="https://panel.menumix.app/register" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-indigo-600 hover:bg-indigo-500 focus:ring-4 focus:ring-indigo-300">
                 {{ i18n "hero_cta_button" }}
             </a>
-            <a href="https://qr.menumix.app/m/leo-cafe?t=7AklBvyCZ9tIvI22x8e9" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-neutral-900 border border-neutral-300 rounded-lg hover:bg-neutral-100 focus:ring-4 focus:ring-neutral-100">
+            <a href="https://qr.menumix.app/m/leo-cafe?t=QoleQY4fwny1sVQmBKrz" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-neutral-900 border border-neutral-300 rounded-lg hover:bg-neutral-100 focus:ring-4 focus:ring-neutral-100">
                 {{ i18n "hero_sample_button" }}
             </a> 
         </div>
